# ccwc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  main.cpp
include/: CLITextCounter.h  ITextCounter.h
src/: CLITextCounter.cpp
test/src/: CLITextCounter.cpp
